--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <div>
-    
-  </div>
+  <section class="header">
+    <div class="container">
+      
+    </div>
+  </section>
 </body>
 </html>
