--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
   <section class="header">
     <div class="container">
+
+    </div>
+  </section>
+  <section class="main">
+    <div class="container">
+
+    </div>
+  </section>
+  <section class="footer">
+    <div class="container">
       
     </div>
   </section>
