--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section class="header">
     <div class="container">
-
+      <div class="header-logo"></div>
     </div>
   </section>
   <section class="main">
