--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <div class="header-logo"></div>
     </div>
   </section>
-  <section class="main">
+  <main class="main">
     <div class="container">
 
     </div>
-  </section>
+  </main>
   <section class="footer">
     <div class="container">
       
