--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     </div>
   </section>
   <main class="main">
-    <div class="container">
+    <section class="hero">
+      
+    </section>
+    <section class="about">
 
-    </div>
+    </section>
   </main>
   <section class="footer">
     <div class="container">
