--- a/index.html
+++ b/index.html
@@ -17,7 +17,36 @@
       
     </section>
     <section class="about">
-
+      <div class="container">
+        <h2 class="about-title">About</h2>
+        <p class="about-descr">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+           Distinctio molestias illo aliquid,nesciunt vitae eum accusamus voluptatibus animi inventore officia laborum,
+            doloremque culpa. Consectetur aut unde ex, alias officia commodi!
+        </p>
+        <div class="about-icons">
+          <div class="about-icon__ava">
+            <img src="" alt="" class="ava">
+            <h3>Full nane</h3>
+            <p>Your name goes here</p>
+          </div>
+          <div class="about-icon__email">
+            <img src="" alt="" class="email">
+            <h3>Email Address</h3>
+            <p>Your name goes here</p>
+          </div>
+          <div class="about-icon__vk">
+            <img src="" alt="" class="vk">
+            <h3>VK account</h3>
+            <p>Your account goes here</p>
+          </div>
+          <div class="about-icon__phone">
+            <img src="" alt="" class="phone">
+            <h3>Phone</h3>
+            <p>Your phone goes here</p>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <section class="footer">
