--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
         </p>
         <div class="about-icons">
           <div class="about-icon__ava">
-            <img src="" alt="" class="ava">
+            <img src="./img/main-pic.png" alt="" class="ava">
             <h3>Full nane</h3>
             <p>Your name goes here</p>
           </div>
           <div class="about-icon__email">
-            <img src="" alt="" class="email">
+            <img src="./img/email-outline.svg" alt="" class="email">
             <h3>Email Address</h3>
             <p>Your name goes here</p>
           </div>
           <div class="about-icon__vk">
-            <img src="" alt="" class="vk">
+            <img src="./img/VK_white.svg" alt="" class="vk">
             <h3>VK account</h3>
             <p>Your account goes here</p>
           </div>
           <div class="about-icon__phone">
-            <img src="" alt="" class="phone">
+            <img src="./img/phone-call.svg" alt="" class="phone">
             <h3>Phone</h3>
             <p>Your phone goes here</p>
           </div>
