--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
     </section>
     <section class="about">
       <div class="container">
-        <h2 class="about-title">About</h2>
-        <p class="about-descr">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-           Distinctio molestias illo aliquid,nesciunt vitae eum accusamus voluptatibus animi inventore officia laborum,
-            doloremque culpa. Consectetur aut unde ex, alias officia commodi!
-        </p>
-        <div class="about-icons">
+        <div class="about-content">
+          <h2 class="about-title">About</h2>
+          <p class="about-descr">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+             Distinctio molestias illo aliquid,nesciunt vitae eum accusamus voluptatibus animi inventore officia laborum,
+              doloremque culpa. Consectetur aut unde ex, alias officia commodi!
+          </p>
+        </div>
+        <div class="about-icons flex">
           <div class="about-icon__ava">
             <img src="./img/main-pic.png" alt="" class="ava">
             <h3>Full nane</h3>
