--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
   <!-- #endregion -->
   <main class="main">
     <section class="hero">
-      <div class="container">
-        
+      <div class="hero__container">
+        <div class="hero__text">
+          <h1 class="name">
+            Hi, I&nbsp;am
+            Oyindamola Bakare
+          </h1>
+        </div>
       </div>
     </section>
     <section class="about">
