--- a/index.html
+++ b/index.html
@@ -36,16 +36,32 @@
 
   <!-- #endregion -->
   <main class="main">
+    <!-- #region HERO-->
     <section class="hero">
-      <div class="hero__container">
+      <div class="hero__container flex">
         <div class="hero__text">
           <h1 class="name">
             Hi, I&nbsp;am
             Oyindamola Bakare
           </h1>
+          <p class="skill">
+            Frontend Developer
+          </p>
+          <div class="hero__btns">
+            <button class="hero__btn btn-reset">
+              Download CV
+            </button>
+            <button class="hero__btn btn-reset">
+              Learn More
+            </button>
+          </div>
+        </div>
+        <div class="hero__avatar">
+          <img src="img/main-pic.png" alt="my photo">
         </div>
       </div>
     </section>
+    <!-- #endregion -->
     <section class="about">
       <div class="container">
         <div class="about-content">
