--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <section class="hero">
       <div class="hero__container flex">
         <div class="hero__text">
-          <h1 class="name">
+          <h1 class="hero__name">
             Hi, I&nbsp;am
             Oyindamola Bakare
           </h1>
-          <p class="skill">
+          <p class="hero__skill">
             Frontend Developer
           </p>
           <div class="hero__btns">
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="hero__avatar">
-          <img src="img/main-pic.png" alt="my photo">
+          
         </div>
       </div>
     </section>
