--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             Frontend Developer
           </p>
           <div class="hero__btns">
-            <button class="hero__btn btn-reset">
+            <button class="hero__btn1  btn btn-reset">
               Download CV
             </button>
-            <button class="hero__btn btn-reset">
+            <button class="hero__btn2 btn btn-reset">
               Learn More
             </button>
           </div>
