--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   
   <!-- #region HEADER -->
+
   <section class="header">
     <div class="header__container flex">
       <div class="header-logo">
@@ -37,7 +38,9 @@
 
   <!-- #endregion -->
   <main class="main">
+
     <!-- #region HERO-->
+
     <section class="hero">
       <div class="hero__container flex">
         <div class="hero__text">
@@ -61,6 +64,8 @@
         </div>
       </div>
     </section>
+    <!-- #endregion -->
+
     <main class="main">
       <section class="hero"></section>
       <section class="about">
